<?xml version="1.0" encoding="utf-8"?>
<!--
 * These layout was made by Tom Leathrum and posted on his blog on May 1, 2014.
 * Here is the url: http://cs.jsu.edu/wordpress/index.php/2014/05/01/mathjax-standalone-android-app-updated-links-with-kitkat-fix/
 I mades some minor modifications on it
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="top"

        android:hint="@string/entertex"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="10"
        android:minLines="1"
        android:nextFocusDown="@+id/editnotes"
        android:scrollbars="none"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editnotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="top"
        android:hint="@string/enternotes"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="10"
        android:minLines="1"
        android:scrollbars="none"
        android:textSize="20dp" />
    <!--  android:inputType="textFilter|textMultiLine"-->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/show" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/example" />

        <Button
            android:id="@+id/bSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="Save EQ" />
    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>